	autoMoveOnDeath <0/1>
	autoMoveOnDeath_x <INT>
	autoMoveOnDeath_y <INT>
	autoMoveOnDeath_map <MAP>
- serverEncoding
  Specifies the server's character encoding (language). Should be one of:
     Western
     Tagalog
     Chinese
     Korean
     Russian
     Cyrillic
     Japanese
     Thai
- New checkSelfCondition _whenEquipped <item>. True iff the named item
  is equipped.
- XKore 2: (manual at http://openkore.sourceforge.net/manual/xkore2.php )
	XKore_ID
	XKore_publicIp
	XKore_listenIp
	XKore_listenPort

Internal:
- Implemented the beginning of a localization framework.
- Actor::get($ID) now returns $players{$ID} instead of $monsters{$ID}
  when both exist (which shouldn't happen, but this is a workaround for
  players being incorrectly detected as monsters).
- packet_outMangle/$switch hook is now called before openkore's built-in
  mangling, to give plugins more freedom.
- packet_attack hook now has extra 'type' argument.
- all receive packets have been moved to Receive.pm now.
- $item->{ID} is now stored.

Credits:
- id-mardi: fix for setPartySkillTimer, move the rest of the receive packets
  to Receive.pm
- mondlicht: teleportAuto_avoidAllPlayers bugfix
- Lord_Balmon: fix for the Win32 GUI interface
- h4rry84: Indonesian translation
- hakore: fix for weight command
- illusionist: move receive packets to receive.pm
- vivi: autoMoveOnDeath, check XKore 2 username


==================
### 1.9.0
==================

*** INCOMPATIBLE CHANGES ***:
- NPC IDs are no longer supported, you must use the location syntax.
- A few more statuses have been renamed such as 'Cartboost' status renamed
  to 'Cart Boost' for consistency with the skill name.
  'Hide' to 'Hiding', too.
- \$remote_socket parameter removed from some Network/Send.pm functions:
  sendCartAdd sendCartGet
- hp, sp options now have a new format.
  hp > 50  - means more than 50hp
  hp > 50% - means more than 50 percent of you hp.
- Old hp_upper,sp_upper removed, use hp sp instead